src/objects/ChatterCustomAction__c.object
<CustomObject>
    <fields>
        <fullName>ActionId__c</fullName>
        <label>Action ID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HandlerJs__c</fullName>
        <inlineHelpText>To use a VisualForce page, enter &quot;/apex/&quot; followed by the page name.</inlineHelpText>
        <label>Handler JS</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Chatter Custom Action</label>
    <nameField>
        <label>Chatter Custom Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chatter Custom Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>